# typescript-wasm-algorithms-comparison

./: .gitignore  README.ja.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
data/: benchmark-results-2025-05-09.csv  benchmark-results-2025-05-15.csv  slope_results.md
notebooks/: main.ipynb  pyproject.toml
public/: benchmark.bundle.js  benchmark.html  bundle.js  index.bundle.js  index.html
src/rust/: Cargo.toml
src/rust/src/: avl_tree.rs  graph.rs  lib.rs  quicksort.rs
src/ts/: benchmark.ts  benchmark_worker.ts  index.ts  types.ts  wasmWrapper.ts  worker.ts
src/ts/algorithms/: avlTree.ts  graph.ts  quickSort.ts
src/ts/benchmarks/: graphBenchmark.ts  sortBenchmark.ts  treeBenchmark.ts
